namespace colabAPI.Business.Models.Entities.Enums;

public enum Escolaridade
{
    Tecnico,
    Graduacao,
    Mestrado,
    Doutorado
}