namespace colab.Business.Models.Entities.Enums
{
    public enum ProjetoCategoria
    {
        Pesquisa = 1,
        Desenvolvimento = 2,
        Extensao = 3
    }
}
